# jpos

./: .gitignore  pyproject.toml  readme.md
.github/: linting_tests.yml
src/jpos/: __init__.py  jpos.py  jpos_old.py  phi.py  test_jpos.py
